grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: permedcoe-services
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana:7.3.7
        name: grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: provisioning
          mountPath: /etc/grafana/provisioning
        - name: dashboards
          mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: provisioning
        configMap:
          name: grafana
          items:
            - key: datasources
              path: datasources/datasources.yaml
            - key: dashboards
              path: dashboards/dashboards.yaml
      - name: dashboards
        persistentVolumeClaim:
          claimName: grafana
