grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: grafana
  namespace: permedcoe-services
spec:
  ports:
  - name: grafana
    port: 80 
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
